--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body class="bg-[#F4F7FF]">
-    <header class="bg-white">
-        <nav class="mt-6 mx-32 flex justify-between ">
+<body id="body" class="bg-[#F4F7FF] min-h-screen">
+    <header >
+        <nav class="bg-white mx-32 pt-2 flex justify-between ">
             <div class="flex gap-2">
                 <img class="w-12" src="./Assets/logo.png" alt="">
                 <h1 class="relative top-3">DEV<span class="font-extrabold">Board</span></h1>
@@ -23,5 +23,14 @@
             </div>
         </nav>
     </header>
+    <main>
+        <!-- tasks section -->
+        <section>
+
+        </section>
+    </main>
+    <script src="./Utilities/utilities.js"></script>
+    <script src="./Scripts/bodyColorToggle.js"></script>
+    
 </body>
 </html>
