--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A5-DEV-BOARD</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- tailwind CDN -->
+     <script src="https://cdn.tailwindcss.com"></script>
+     <style>
+        .font-poppins{
+            font-family: 'Poppins', sans-serif;
+        }
+        .white-bg{
+            background-color: #F4F7FF;
+        }
+        .hero-bg-gradient{
+            background-image: linear-gradient(to right, #3752FD, #9BA8F8);
+        }
+     </style>
 </head>
-<body id="body" class="bg-[#F4F7FF] min-h-screen">
+<body id="body" class="white-bg font-poppins p-2 min-h-screen">
     <header >
-        <nav class="bg-white mx-32 pt-2 flex justify-between ">
+        <nav class="bg-white mx-32 p-2 rounded-lg flex justify-between ">
             <div class="flex gap-2">
                 <img class="w-12" src="./Assets/logo.png" alt="">
                 <h1 class="relative top-3">DEV<span class="font-extrabold">Board</span></h1>
@@ -25,8 +42,110 @@
     </header>
     <main>
         <!-- tasks section -->
-        <section>
+        <section class="bg-white mt-4 p-6">
+            <div class="flex p-6 gap-6 items-center justify-between">
+                <div class="flex gap-4 rounded-lg white-bg p-4">
+                    <img  class="w-16" src="./Assets/checkbox.png" alt="">
+                    <div>
+                        <p>Tasks Assigned</p>
+                        <h1>0<span id="tasks-count">6</span></h1>
+                    </div>
+                </div>
+                <div id="blog-btn" class="flex hero-bg-gradient gap-4 rounded-lg p-4">
+                    <img class="w-16" src="./Assets/board.png" alt="">
+                    <p>Discover Something<br>New Today!</p>
+                </div>
+                <div class="flex rounded-lg white-bg p-4 gap-4">
+                    <img class="w-16" src="./Assets/calender.png" alt="">
+                    <p><span id="day-disp">Wed</span>,<br><span id="date-disp">Jul 28 2025</span></p>
+                </div>
+            </div>
+            <div class="grid grid-cols-3 gap-4">
+                <div class="card card-border bg-base-100 w-96 white-bg p-2">
+                <div class="card-body">
+                    <button class="btn w-fit bg-white px-2 py-4">Shop Ease</button>
+                    <h1 class="text-2xl">Fix Mobile Button Issue</h1>
+                    <p class="bg-white p-4 rounded-lg text-gray-800">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+                    and ensure onClick works properly</p>
+                    <div class="card-actions justify-end mt-4 border-dashed">
+                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <button class="btn-active btn btn-primary bg-blue-700 text-white py-4 px-8 ">Completed</button>
+                    </div>
+                </div>
+                </div>
 
+                <!-- card 2 -->
+                 <div class="card card-border bg-base-100 w-96 white-bg p-2">
+                <div class="card-body">
+                    <button class="btn w-fit bg-white px-2 py-4">CloudSync</button>
+                    <h1 class="text-2xl">Add Dark Mode</h1>
+                    <p class="bg-white p-4 rounded-lg text-gray-800">Store the user's preference in localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
+                    <div class="card-actions justify-end mt-4 border-dashed">
+                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <button class="btn-active btn btn-primary bg-blue-700 text-white py-4 px-8 ">Completed</button>
+                    </div>
+                </div>
+                </div>
+
+                <!-- card 3 -->
+
+                <div class="card card-border bg-base-100 w-96 white-bg p-2">
+                <div class="card-body">
+                    <button class="btn w-fit bg-white px-2 py-4">SwiftPay</button>
+                    <h1 class="text-2xl">Optimize  Home page</h1>
+                    <p class="bg-white p-4 rounded-lg text-gray-800">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+and ensure onClick works properly</p>
+                    <div class="card-actions justify-end mt-4 border-dashed">
+                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <button class="btn-active btn btn-primary bg-blue-700 text-white py-4 px-8 ">Completed</button>
+                    </div>
+                </div>
+                </div>
+
+                <!-- card 4 -->
+
+                <div class="card card-border bg-base-100 w-96 white-bg p-2">
+                <div class="card-body">
+                    <button class="btn w-fit bg-white px-2 py-4">Meta</button>
+                    <h1 class="text-2xl">Add new emoji 🤲</h1>
+                    <p class="bg-white p-4 rounded-lg text-gray-800">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+and ensure onClick works properly</p>
+                    <div class="card-actions justify-end mt-4 border-dashed">
+                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <button class="btn-active btn btn-primary bg-blue-700 text-white py-4 px-8">Completed</button>
+                    </div>
+                </div>
+                </div>
+
+                <!-- card 5 -->
+                 <div class="card card-border bg-base-100 w-96 white-bg p-2">
+                <div class="card-body">
+                    <button class="btn w-fit bg-white px-2 py-4">Google LLC</button>
+                    <h1 class="text-2xl">Integrate OpenAI API </h1>
+                    <p class="bg-white p-4 rounded-lg text-gray-800">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+and ensure onClick works properly</p>
+                    <div class="card-actions justify-end mt-4 border-dashed">
+                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <button class="btn-active btn btn-primary bg-blue-700 text-white py-4 px-8">Completed</button>
+                    </div>
+                </div>
+                </div>
+
+                <!-- card 6 -->
+
+                <div class="card card-border bg-base-100 w-96 white-bg p-2">
+                <div class="card-body">
+                    <button class="btn w-fit bg-white px-2 py-4">Glassdoar</button>
+                    <h1 class="text-2xl">Improve Job searching </h1>
+                    <p class="bg-white p-4 rounded-lg text-gray-800">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+and ensure onClick works properly</p>
+                    <div class="card-actions justify-end mt-4 border-dashed">
+                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <button class="btn-active btn btn-primary bg-blue-700 text-white py-4 px-8">Completed</button>
+                    </div>
+                </div>
+                </div>
+            </div>
         </section>
     </main>
     <script src="./Utilities/utilities.js"></script>
