feat: add dateAdjust script to display correct date

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     and ensure onClick works properly</p>
                     <hr class="border-dashed border-gray-300 mb-4">
                     <div class="card-actions justify-end mt-4 border-dashed">
-                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <p>Deadline<br><span class="date-display">21 March 2025</span></p>
                     <button class="btn-active btn btn-primary bg-blue-700 text-white p-2 ">Completed</button>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                     <p class="bg-white p-4 rounded-lg text-gray-800">Store the user's preference in localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
                     <hr class="border-dashed border-gray-300 mb-4">
                     <div class="card-actions justify-end mt-4 border-dashed">
-                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <p>Deadline<br><span class="date-display">21 March 2025</span></p>
                     <button class="btn-active btn btn-primary bg-blue-700 text-white p-2 ">Completed</button>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
 and ensure onClick works properly</p>
 <hr class="border-dashed border-gray-300 mb-4">
                     <div class="card-actions justify-end mt-4 border-dashed">
-                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <p>Deadline<br><span class="date-display">21 March 2025</span></p>
                     <button class="btn-active btn btn-primary bg-blue-700 text-white p-2 ">Completed</button>
                     </div>
                 </div>
@@ -116,7 +116,7 @@ and ensure onClick works properly</p>
 and ensure onClick works properly</p>
 <hr class="border-dashed border-gray-300 mb-4">
                     <div class="card-actions justify-end mt-4 border-dashed">
-                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <p>Deadline<br><span class="date-display">21 March 2025</span></p>
                     <button class="btn-active btn btn-primary bg-blue-700 text-white p-2 ">Completed</button>
                     </div>
                 </div>
@@ -131,7 +131,7 @@ and ensure onClick works properly</p>
 and ensure onClick works properly</p>
                         <hr class="border-dashed border-gray-300 mb-4">
                     <div class="card-actions justify-end mt-4 border-dashed">
-                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <p>Deadline<br><span class="date-display">21 March 2025</span></p>
                     <button class="btn-active btn btn-primary bg-blue-700 text-white p-2 ">Completed</button>
                     </div>
                 </div>
@@ -147,7 +147,7 @@ and ensure onClick works properly</p>
 and ensure onClick works properly</p>
 <hr class="border-dashed border-gray-300 mb-4">
                     <div class="card-actions justify-end mt-4 border-dashed">
-                    <p>Deadline<br><span id="date-disp">21 March 2025</span></p>
+                    <p>Deadline<br><span class="date-display">21 March 2025</span></p>
                     <button class="btn-active btn btn-primary bg-blue-700 text-white p-2 ">Completed</button>
                     </div>
                 </div>
@@ -167,6 +167,7 @@ and ensure onClick works properly</p>
     </main>
     <script src="./Utilities/utilities.js"></script>
     <script src="./Scripts/bodyColorToggle.js"></script>
+    <script src="./Scripts/dateAdjust.js"></script>
     
 </body>
 </html>
