--- a/index.html
+++ b/index.html
@@ -155,13 +155,14 @@ and ensure onClick works properly</p>
             </div>
         </section>
         <!-- side section -->
-         <section id="sidebar" class="bg-white mt-4 p-6 flex flex-col gap-6 w-[200px] shrink-0 rounded-lg">
+         <section  class="bg-white mt-4 p-6 flex flex-col gap-6 w-[200px] shrink-0 rounded-lg">
             <div class="flex gap-4 ">
                 <img src="./Assets/activity.png" alt="">
                 <p>Activity Log</p>
             </div>
-            <button id="clear-histroy-btn" class="btn btn-active btn-primary bg-blue-700 text-white">Clear History</button>
+            <button id="clear-history-btn" class="btn btn-primary bg-blue-700 text-white">Clear History</button>
             <hr class="border-dashed border-gray-300 w-full">
+            <div id="sidebar"></div>
          </section>
         
     </main>
@@ -169,6 +170,7 @@ and ensure onClick works properly</p>
     <script src="./Scripts/bodyColorToggle.js"></script>
     <script src="./Scripts/dateAdjust.js"></script>
     <script src="./Scripts/taskCounter.js"></script>
+    <script src="./Scripts/tasksReset.js"></script>
     
 </body>
 </html>
