feat: add page redirection feature

--- a/blog.html
+++ b/blog.html
@@ -59,5 +59,6 @@
             <p>To create an element, use document.createElement(). To add it to the DOM, use parentElement.appendChild(childElement). To remove an element, use parentElement.removeChild(childElement).</p>
         </div>
     </main>
+    <script src="./Scripts/deskToggle.js"></script>
 </body>
 </html>
