--- a/index.html
+++ b/index.html
@@ -171,6 +171,6 @@ and ensure onClick works properly</p>
     <script src="./Scripts/dateAdjust.js"></script>
     <script src="./Scripts/taskCounter.js"></script>
     <script src="./Scripts/tasksReset.js"></script>
-    
+    <script src="./Scripts/blogToggle.js"></script>
 </body>
 </html>
